# s3-commander

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
s3_browser/: __init__.py  main.py  s3_client.py
s3_browser/api/: __init__.py  routes.py
static/: app.js  index.html  style.css
